--- a/index.html
+++ b/index.html
@@ -95,3 +95,19 @@
 </body>
 </html>
 python3 -m http.server 8000
+my-website/
+├── index.html
+├── style.css
+└── images/
+    └── logo.png
+
+    <img src="images/logo.png" alt="My Logo" width="200">
+img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+git add .
+git commit -m "Added images"
+git push origin main
+
